# ppoker-digits-poc

./: .gitignore  README.md
.github/workflows/: ml.yml  web.yml
docs/: handwriting-poc-browser-evidence.md  handwriting-poc-desktop-benchmark.md  handwriting-poc-plan.md  handwriting-poc-smoke-test.md
ml/digits/: NOTICE.md  README.md  dataset.py  decode.py  download.py  evaluate.py  export.py  freeze.py  model.py  provenance.py  pyproject.toml  train.py  verify.py
ml/digits/manifests/: export-fixtures.json  v2.json
ml/digits/reports/: calibration.json  cpu-benchmark.json  final-test.json  onnx-parity.json  run-manifest.json  training.json
ml/digits/tests/: test_dataset.py  test_download.py  test_evaluate.py  test_export.py  test_model_decode.py  test_train.py  test_verify.py
scripts/: serve-handwriting-poc.sh
web-client/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web-client/e2e/: canvas.ts  confidence-corpus.spec.ts  confidence-corpus.ts  failure.spec.ts  fixtures.ts  interaction.spec.ts  ios-regression.spec.ts  real-model.spec.ts  screenshot.css  strokes.ts  valid-strokes.ts  visual.spec.ts
web-client/legal/: THIRD_PARTY_NOTICES.txt
web-client/scripts/: browser-benchmark-failure-self-test.mjs  browser-benchmark.mjs  copy-legal-assets.mjs  copy-legal-assets.test.mjs  copy-ort-assets.mjs  copy-ort-assets.test.mjs  devtools-client.mjs  devtools-client.test.mjs  launcher-smoke.mjs  model-integrity.test.mjs  preview-server.mjs  runtime-build.test.mjs  server-smoke.mjs
(+28 files in other folders)
