[project]
name = "ppoker-digits"
version = "0.1.0"
description = "Reproducible synthetic digit-recognition tooling for the handwriting POC"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy==2.1.3",
  "onnx==1.17.0",
  "onnxruntime==1.20.1",
  "pillow==11.0.0",
  "torch==2.6.0",
  "torchvision==0.21.0",
]

[dependency-groups]
dev = ["pytest==8.3.4"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
